--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 
-<!-- Mirrored from miller.bslthemes.com/ashley-demo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 08 Mar 2025 16:09:28 GMT -->
+<!-- Mirrored from miller.bslthemes.com/ashley-demo/404 by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 08 Mar 2025 16:09:28 GMT -->
 <head>
 
     <meta charset="UTF-8">
@@ -51,7 +51,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">M.</a>
+                <a href="home-1" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -67,39 +67,39 @@
                                     <li class="mil-has-children">
                                         <a href="#.">Homepage</a>
                                         <ul>
-                                            <li><a href="home-1.html">Landing page</a></li>
-                                            <li><a href="home-2.html">Personal</a></li>
-                                            <li><a href="portfolio-3.html">Portfolio slider</a></li>
+                                            <li><a href="home-1">Landing page</a></li>
+                                            <li><a href="home-2">Personal</a></li>
+                                            <li><a href="portfolio-3">Portfolio slider</a></li>
                                         </ul>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="#.">Portfolio</a>
                                         <ul>
-                                            <li><a href="portfolio-1.html">Grid type 1</a></li>
-                                            <li><a href="portfolio-2.html">Grid type 2</a></li>
-                                            <li><a href="portfolio-3.html">Slider</a></li>
+                                            <li><a href="portfolio-1">Grid type 1</a></li>
+                                            <li><a href="portfolio-2">Grid type 2</a></li>
+                                            <li><a href="portfolio-3">Slider</a></li>
                                         </ul>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="#.">Services</a>
                                         <ul>
-                                            <li><a href="services.html">Services List</a></li>
-                                            <li><a href="service.html">Single service</a></li>
+                                            <li><a href="services">Services List</a></li>
+                                            <li><a href="service">Single service</a></li>
                                         </ul>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="#.">Newsletter</a>
                                         <ul>
-                                            <li><a href="blog.html">Blog List</a></li>
-                                            <li><a href="publication.html">Publication</a></li>
+                                            <li><a href="blog">Blog List</a></li>
+                                            <li><a href="publication">Publication</a></li>
                                         </ul>
                                     </li>
                                     <li class="mil-has-children mil-active">
                                         <a href="#.">Other pages</a>
                                         <ul>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                            <li><a href="404.html">404</a></li>
+                                            <li><a href="team">Team</a></li>
+                                            <li><a href="contact">Contact</a></li>
+                                            <li><a href="404">404</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -121,12 +121,12 @@
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
 
                                             <ul class="mil-menu-list">
-                                                <li><a href="project-1.html" class="mil-light-soft">Interior design studio</a></li>
-                                                <li><a href="project-2.html" class="mil-light-soft">Home Security Camera</a></li>
-                                                <li><a href="project-3.html" class="mil-light-soft">Kemia Honest Skincare</a></li>
-                                                <li><a href="project-4.html" class="mil-light-soft">Cascade of Lava</a></li>
-                                                <li><a href="project-5.html" class="mil-light-soft">Air Pro by Molekule</a></li>
-                                                <li><a href="project-6.html" class="mil-light-soft">Tony's Chocolonely</a></li>
+                                                <li><a href="project-1" class="mil-light-soft">Interior design studio</a></li>
+                                                <li><a href="project-2" class="mil-light-soft">Home Security Camera</a></li>
+                                                <li><a href="project-3" class="mil-light-soft">Kemia Honest Skincare</a></li>
+                                                <li><a href="project-4" class="mil-light-soft">Cascade of Lava</a></li>
+                                                <li><a href="project-5" class="mil-light-soft">Air Pro by Molekule</a></li>
+                                                <li><a href="project-6" class="mil-light-soft">Tony's Chocolonely</a></li>
                                             </ul>
 
                                         </div>
@@ -178,7 +178,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">M.</a>
+                <a href="home-1" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -214,7 +214,7 @@
                                 </div>
 
                                 <h4 class="mil-404-text mil-dark mil-mb-60">Oops! Something went wrong :(</h4>
-                                <a href="home-1.html" class="mil-button mil-arrow-place">
+                                <a href="home-1" class="mil-button mil-arrow-place">
                                     <span>Back to homepage</span>
                                 </a>
                             </div>
@@ -358,5 +358,5 @@
 </body>
 
 
-<!-- Mirrored from miller.bslthemes.com/ashley-demo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 08 Mar 2025 16:09:28 GMT -->
+<!-- Mirrored from miller.bslthemes.com/ashley-demo/404 by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 08 Mar 2025 16:09:28 GMT -->
 </html>
