--- a/landing.html
+++ b/landing.html
@@ -66,7 +66,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -80,9 +80,9 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="portfolio">Portfolio</a></li>
+                                    <li><a href="service">Service</a></li>
+                                    <li><a href="contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -161,7 +161,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -204,11 +204,11 @@
                                     </div>
                                 </div>
 
-                                <a href="services.html" class="mil-button mil-arrow-place mil-btn-space">
+                                <a href="services" class="mil-button mil-arrow-place mil-btn-space">
                                     <span>What we do</span>
                                 </a>
 
-                                <a href="portfolio-1.html" class="mil-link mil-muted mil-arrow-place">
+                                <a href="portfolio-1" class="mil-link mil-muted mil-arrow-place">
                                     <span>View works</span>
                                 </a>
 
@@ -298,7 +298,7 @@
                                 <div class="mil-complex-text justify-content-center mil-up">
 
                                     <h2 class="mil-h1 mil-muted mil-center">For Your <span class="mil-thin">Business.</span></h2>
-                                    <a href="services.html" class="mil-services-button mil-button mil-arrow-place"><span>What we do</span></a>
+                                    <a href="services" class="mil-services-button mil-button mil-arrow-place"><span>What we do</span></a>
 
                                 </div>
                             </div>
@@ -306,7 +306,7 @@
                             <div class="row mil-services-grid m-0">
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="service" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">Branding and <br>Identity Design</h5>
                                         <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -315,7 +315,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="service" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">Website Design <br>and Development</h5>
                                         <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -324,7 +324,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="service" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">Advertising and <br>Marketing Campaigns</h5>
                                         <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -333,7 +333,7 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 mil-services-grid-item p-0">
 
-                                    <a href="service.html" class="mil-service-card-sm mil-up">
+                                    <a href="service" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">Creative Consulting <br>and Development</h5>
                                         <p class="mil-light-soft mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
@@ -358,7 +358,7 @@
 
                                     <p class="mil-up mil-mb-60">Together, our creative team is committed to delivering impactful work that exceeds expectations.</p>
 
-                                    <div class="mil-up"><a href="team.html" class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a></div>
+                                    <div class="mil-up"><a href="team" class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a></div>
 
                                     <h4 class="mil-up"><span class="mil-thin">We</span> delivering <br><span class="mil-thin">exceptional</span> results.</h4>
                                 </div>
@@ -376,7 +376,7 @@
                                                 <img src="img/faces/1.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna Oldman</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2">Anna Oldman</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Art Director</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
@@ -392,7 +392,7 @@
                                                 <img src="img/faces/3.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar Freeman</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2">Oscar Freeman</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Frontend Dev</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
@@ -413,7 +413,7 @@
                                                 <img src="img/faces/2.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma Newman</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2">Emma Newman</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Founder</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
@@ -429,7 +429,7 @@
                                                 <img src="img/faces/4.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa Trueman</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="home-2">Lisa Trueman</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">UI/UX Designer</p>
                                                         <ul class="mil-social-icons mil-center">
                                                             <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
@@ -575,7 +575,7 @@
                             </div>
                             <div class="col-lg-6 mil-mb-30">
                                 <div class="mil-adaptive-right mil-up">
-                                    <a href="blog.html" class="mil-link mil-dark mil-arrow-place">
+                                    <a href="blog" class="mil-link mil-dark mil-arrow-place">
                                         <span>View all</span>
                                     </a>
                                 </div>
@@ -584,7 +584,7 @@
                         <div class="row">
                             <div class="col-lg-6">
 
-                                <a href="publication.html" class="mil-blog-card mil-mb-60">
+                                <a href="publication" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
                                         <img src="img/blog/1.jpg" alt="cover">
                                     </div>
@@ -604,7 +604,7 @@
                             </div>
                             <div class="col-lg-6">
 
-                                <a href="publication.html" class="mil-blog-card mil-mb-60">
+                                <a href="publication" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
                                         <img src="img/blog/2.jpg" alt="cover">
                                     </div>
@@ -651,19 +651,19 @@
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="home-1">Home</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
+                                                        <a href="portfolio-1">Portfolio</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                        <a href="services">Services</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
+                                                        <a href="contact">Contact</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
+                                                        <a href="blog">Blog</a>
                                                     </li>
                                                 </ul>
                                             </nav>
@@ -839,7 +839,7 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="assets/"></script>
+    <script src="assets/js/plugins/jquery.min.js"></script>
     <!-- swup js -->
     <script src="assets/js/plugins/swup.min.js"></script>
     <!-- swiper js -->
