--- a/portfolio.html
+++ b/portfolio.html
@@ -39,17 +39,21 @@
         <!-- cursor end -->
 
         <!-- preloader -->
-        <div class="mil-preloader">
+       <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
-                    <p class="mil-h3 mil-muted">Creative</p>
-                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
+                    <p class="mil-h3 mil-muted mil-thin">Loading, please wait</p>
                 </div>
+
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
-                        <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">Baylon, Marvin</p>
+                        <p class="mil-h3 mil-muted mil-thin">Almost ready</p>
+                    </div>
+                </div>
+
+                <div class="mil-pos-abs mil-animation-3">
+                    <div class="mil-reveal-frame">
+                        <p class="mil-h3 mil-muted">Enjoy your visit</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +70,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="/index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -80,9 +84,9 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="portfolio">Projects</a></li>
+                                    <li><a href="service">Service</a></li>
+                                    <li><a href="contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -98,31 +102,25 @@
                                 <div class="mil-menu-right">
                                     <div class="row justify-content-between">
                                         <div class="col-lg-4 mil-mb-60">
-
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
-
                                             <ul class="mil-menu-list">
-                                                <li><a target="_blank" href="https://bcclibrary.com/" class="mil-light-soft">BCC Library</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/Customer_Relationship_Management" class="mil-light-soft">CRM</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/e-forms/" class="mil-light-soft">E-forms</a></li>
-                                                <li><a target="_blank" href="http://hitz.com/" class="mil-light-soft">Hitz</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/" class="mil-light-soft">InterlinkIQ</a></li>
-                                                <li><a target="_blank" href="https://itblaster.net/" class="mil-light-soft">ITBlaster.net</a></li>
-                                                <li><a target="_blank" href="https://scrapmatic.com/" class="mil-light-soft">ScrapMatic</a></li>
+                                                <li><a target="_blank" href="projects/bcclibrary" class="mil-light-soft">BCC E-Library</a></li>
+                                                <li><a target="_blank" href="projects/crm" class="mil-light-soft">CRM</a></li>
+                                                <li><a target="_blank" href="projects/eforms" class="mil-light-soft">E-forms</a></li>
+                                                <li><a target="_blank" href="projects/hitz" class="mil-light-soft">Hitz</a></li>
+                                                <li><a target="_blank" href="projects/interlinkiq" class="mil-light-soft">InterlinkIQ</a></li>
+                                                <li><a target="_blank" href="projects/itblaster" class="mil-light-soft">ITBlaster.net</a></li>
+                                                <li><a target="_blank" href="projects/scrapsmart" class="mil-light-soft">ScrapSmart</a></li>
                                             </ul>
-
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
-
                                             <h6 class="mil-muted mil-mb-30">Useful links</h6>
-
                                             <ul class="mil-menu-list">
-                                                <li><a href="#." class="mil-light-soft">Home</a></li>
-                                                <li><a href="#." class="mil-light-soft">Portfolio</a></li>
-                                                <li><a href="#." class="mil-light-soft">Project</a></li>
-                                                <li><a href="#." class="mil-light-soft">Contact</a></li>
+                                                <li><a href="/index" class="mil-light-soft">Home</a></li>
+                                                <li><a href="portfolio" class="mil-light-soft">Projects</a></li>
+                                                <li><a href="service" class="mil-light-soft">Service</a></li>
+                                                <li><a href="contact" class="mil-light-soft">Contact</a></li>
                                             </ul>
-
                                         </div>
                                     </div>
                                     <div class="mil-divider mil-mb-60"></div>
@@ -161,7 +159,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -202,13 +200,13 @@
                                                 <div class="mil-descr" data-swiper-parallax-x="104%" data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">web application</div>
+                                                            <div class="mil-label mil-upper">2024</div>
                                                         </div>
-                                                        <h5>Interior design studio</h5>
+                                                        <h5>BCC E-Library</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/bcclibrary" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -227,13 +225,13 @@
                                                 <div class="mil-descr" data-swiper-parallax-x="104%" data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">Web Application</div>
+                                                            <div class="mil-label mil-upper">2023</div>
                                                         </div>
-                                                        <h5>Home Security Camera</h5>
+                                                        <h5>CRM</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/crm" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -253,12 +251,12 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
                                                             <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper">2022</div>
                                                         </div>
-                                                        <h5>Kemia Honest Skincare</h5>
+                                                        <h5>E-Forms</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/eforms" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -277,13 +275,13 @@
                                                 <div class="mil-descr" data-swiper-parallax-x="104%" data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">Web Application</div>
+                                                            <div class="mil-label mil-upper">2024</div>
                                                         </div>
-                                                        <h5>Cascade of Lava</h5>
+                                                        <h5>HitZ</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/hitz" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -302,13 +300,13 @@
                                                 <div class="mil-descr" data-swiper-parallax-x="104%" data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">Web Application</div>
+                                                            <div class="mil-label mil-upper">2022</div>
                                                         </div>
-                                                        <h5>Air Pro by Molekule</h5>
+                                                        <h5>InterlinkIQ</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/interlinkiq" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -326,13 +324,13 @@
                                                 <div class="mil-descr" data-swiper-parallax-x="104%" data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">Web Application</div>
+                                                            <div class="mil-label mil-upper">2022</div>
                                                         </div>
-                                                        <h5>Tony's Chocolonely</h5>
+                                                        <h5>ITBlaster</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/itblaster.html" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -349,13 +347,13 @@
                                                 <div class="mil-descr" data-swiper-parallax-x="104%" data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">Web Application</div>
+                                                            <div class="mil-label mil-upper">2023</div>
                                                         </div>
-                                                        <h5>Tony's Chocolonely</h5>
+                                                        <h5>ScrapSmart</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project.html" class="mil-button mil-arrow-place">
+                                                        <a href="projects/scrapsmart" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
