--- a/projects/itblaster.html
+++ b/projects/itblaster.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="assets/css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="../assets/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <!-- swiper css -->
-    <link rel="stylesheet" href="assets/css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="../assets/css/plugins/swiper.min.css">
     <!-- fancybox css -->
-    <link rel="stylesheet" href="assets/css/plugins/fancybox.min.css">
+    <link rel="stylesheet" href="../assets/css/plugins/fancybox.min.css">
     <!-- ashley scss -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <!-- page name -->
     <title>Marvin</title>
 
@@ -42,14 +42,18 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
-                    <p class="mil-h3 mil-muted">Creative</p>
-                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
+                    <p class="mil-h3 mil-muted mil-thin">Loading, please wait</p>
                 </div>
+
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
-                        <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">Baylon, Marvin</p>
+                        <p class="mil-h3 mil-muted mil-thin">Almost ready</p>
+                    </div>
+                </div>
+
+                <div class="mil-pos-abs mil-animation-3">
+                    <div class="mil-reveal-frame">
+                        <p class="mil-h3 mil-muted">Enjoy your visit</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +70,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="../index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -79,10 +83,10 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="#.">Home</a></li>
+                                    <li class="mil-active"><a href="../portfolio">Projects</a></li>
+                                    <li><a href="../service">Service</a></li>
+                                    <li><a href="../contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -98,31 +102,25 @@
                                 <div class="mil-menu-right">
                                     <div class="row justify-content-between">
                                         <div class="col-lg-4 mil-mb-60">
-
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
-
                                             <ul class="mil-menu-list">
-                                                <li><a target="_blank" href="https://bcclibrary.com/" class="mil-light-soft">BCC Library</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/Customer_Relationship_Management" class="mil-light-soft">CRM</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/e-forms/" class="mil-light-soft">E-forms</a></li>
-                                                <li><a target="_blank" href="http://hitz.com/" class="mil-light-soft">Hitz</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/" class="mil-light-soft">InterlinkIQ</a></li>
-                                                <li><a target="_blank" href="https://itblaster.net/" class="mil-light-soft">ITBlaster.net</a></li>
-                                                <li><a target="_blank" href="https://scrapmatic.com/" class="mil-light-soft">ScrapMatic</a></li>
+                                                <li><a target="_blank" href="../projects/bcclibrary" class="mil-light-soft">BCC E-Library</a></li>
+                                                <li><a target="_blank" href="../projects/crm" class="mil-light-soft">CRM</a></li>
+                                                <li><a target="_blank" href="../projects/eforms" class="mil-light-soft">E-forms</a></li>
+                                                <li><a target="_blank" href="../projects/hitz" class="mil-light-soft">Hitz</a></li>
+                                                <li><a target="_blank" href="../projects/interlinkiq" class="mil-light-soft">InterlinkIQ</a></li>
+                                                <li><a target="_blank" href="../projects/itblaster" class="mil-light-soft">ITBlaster.net</a></li>
+                                                <li><a target="_blank" href="../projects/scrapsmart" class="mil-light-soft">ScrapSmart</a></li>
                                             </ul>
-
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
-
                                             <h6 class="mil-muted mil-mb-30">Useful links</h6>
-
                                             <ul class="mil-menu-list">
-                                                <li><a href="#." class="mil-light-soft">Home</a></li>
-                                                <li><a href="#." class="mil-light-soft">Portfolio</a></li>
-                                                <li><a href="#." class="mil-light-soft">Project</a></li>
-                                                <li><a href="#." class="mil-light-soft">Contact</a></li>
+                                                <li><a href="../index" class="mil-light-soft">Home</a></li>
+                                                <li><a href="../portfolio" class="mil-light-soft">Projects</a></li>
+                                                <li><a href="../service" class="mil-light-soft">Service</a></li>
+                                                <li><a href="../contact" class="mil-light-soft">Contact</a></li>
                                             </ul>
-
                                         </div>
                                     </div>
                                     <div class="mil-divider mil-mb-60"></div>
@@ -161,7 +159,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="../index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -189,11 +187,11 @@
                         </div>
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-mb-60">
-                                <li><a href="index.html">Homepage</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
-                                <li><a href="project.html">Project</a></li>
+                                <li><a href="../index">Homepage</a></li>
+                                <li><a href="portfolio">Portfolio</a></li>
+                                <li>BCC E-Library</li>
                             </ul>
-                            <h1 class="mil-mb-60">Interior Design <span class="mil-thin">Studio</span></h1>
+                            <h1 class="mil-mb-60">BCC <span class="mil-thin">E-Library</span></h1>
                             <a href="#project" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Read more</span>
                             </a>
@@ -221,9 +219,8 @@
 
                                     <p class="mil-up mil-mb-60">Presents a simple and quiet state when not in use, delivering a gentle and security.At the same time, the camera can adapt to a variety of environments, providing elegant ways of wall hanging and standing installation.</p>
 
-                                    <a data-no-swup href="https://www.behance.net/gallery/117994149/Home-Security-Camera?tracking_source=curated_galleries_product-design" target="_blank" class="mil-link mil-dark mil-up  mil-arrow-place">
+                                    <a data-no-swup href="bcclibrary.com" target="_blank" class="mil-link mil-dark mil-up  mil-arrow-place">
                                         <span>Visit website</span>
-
                                     </a>
                                 </div>
 
@@ -231,27 +228,27 @@
                             <div class="col-lg-7">
 
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="assets/img/works/2/1.gif" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/1.gif" class="mil-zoom-btn">
-                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
+                                    <img src="../assets/img/works/2/1.gif" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/1.gif" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="assets/img/works/2/2.jpg" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/2.jpg" class="mil-zoom-btn">
-                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
+                                    <img src="../assets/img/works/2/2.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/2.jpg" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
                                 <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
-                                    <img src="assets/img/works/2/3.jpg" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/3.jpg" class="mil-zoom-btn">
-                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
+                                    <img src="../assets/img/works/2/3.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/3.jpg" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
                                 <div class="mil-image-frame mil-horizontal mil-up">
-                                    <img src="assets/img/works/2/4.jpg" alt="image">
-                                    <a data-fancybox="gallery" data-no-swup href="assets/img/works/2/4.jpg" class="mil-zoom-btn">
-                                        <img src="assets/img/icons/zoom.svg" alt="zoom">
+                                    <img src="../assets/img/works/2/4.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/4.jpg" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
                                     </a>
                                 </div>
 
@@ -374,23 +371,23 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="assets/js/plugins/jquery.min.js"></script>
+    <script src="../assets/js/plugins/jquery.min.js"></script>
     <!-- swup js -->
-    <script src="assets/js/plugins/swup.min.js"></script>
+    <script src="../assets/js/plugins/swup.min.js"></script>
     <!-- swiper js -->
-    <script src="assets/js/plugins/swiper.min.js"></script>
+    <script src="../assets/js/plugins/swiper.min.js"></script>
     <!-- fancybox js -->
-    <script src="assets/js/plugins/fancybox.min.js"></script>
+    <script src="../assets/js/plugins/fancybox.min.js"></script>
     <!-- gsap js -->
-    <script src="assets/js/plugins/gsap.min.js"></script>
+    <script src="../assets/js/plugins/gsap.min.js"></script>
     <!-- scroll smoother -->
-    <script src="assets/js/plugins/smooth-scroll.js"></script>
+    <script src="../assets/js/plugins/smooth-scroll.js"></script>
     <!-- scroll trigger js -->
-    <script src="assets/js/plugins/ScrollTrigger.min.js"></script>
+    <script src="../assets/js/plugins/ScrollTrigger.min.js"></script>
     <!-- scroll to js -->
-    <script src="assets/js/plugins/ScrollTo.min.js"></script>
+    <script src="../assets/js/plugins/ScrollTo.min.js"></script>
     <!-- ashley js -->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 </html>
