--- a/publication.html
+++ b/publication.html
@@ -66,7 +66,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -80,9 +80,9 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="portfolio">Portfolio</a></li>
+                                    <li><a href="service">Service</a></li>
+                                    <li><a href="contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -161,7 +161,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -186,9 +186,9 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog.html">Publication</a></li>
+                                <li><a href="home-1">Homepage</a></li>
+                                <li><a href="blog">Blog</a></li>
+                                <li><a href="blog">Publication</a></li>
                             </ul>
                             <h2>How to Become a <span class="mil-thin">Graphic</span><br> Designer in <span class="mil-thin">10 Simple Steps</span></h2>
                         </div>
@@ -272,7 +272,7 @@
                             </div>
                             <div class="col-lg-6 mil-mb-30">
                                 <div class="mil-adaptive-right mil-up">
-                                    <a href="blog-inner.html" class="mil-link mil-dark mil-arrow-place">
+                                    <a href="blog-inner" class="mil-link mil-dark mil-arrow-place">
                                         <span>View all</span>
                                     </a>
                                 </div>
@@ -281,7 +281,7 @@
                         <div class="row">
                             <div class="col-lg-6">
 
-                                <a href="publication.html" class="mil-blog-card mil-mb-60">
+                                <a href="publication" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
                                         <img src="assets/img/blog/8.jpg" alt="cover">
                                     </div>
@@ -301,7 +301,7 @@
                             </div>
                             <div class="col-lg-6">
 
-                                <a href="publication.html" class="mil-blog-card mil-mb-60">
+                                <a href="publication" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
                                         <img src="assets/img/blog/1.jpg" alt="cover">
                                     </div>
@@ -348,19 +348,19 @@
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="home-1">Home</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
+                                                        <a href="portfolio-1">Portfolio</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                        <a href="services">Services</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
+                                                        <a href="contact">Contact</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
+                                                        <a href="blog">Blog</a>
                                                     </li>
                                                 </ul>
                                             </nav>
