--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,18 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
-                    <p class="mil-h3 mil-muted">Creative</p>
-                    <p class="mil-h3 mil-muted mil-thin">Excellence</p>
+                    <p class="mil-h3 mil-muted mil-thin">Loading, please wait</p>
                 </div>
+
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
-                        <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">Baylon, Marvin</p>
+                        <p class="mil-h3 mil-muted mil-thin">Almost ready</p>
+                    </div>
+                </div>
+
+                <div class="mil-pos-abs mil-animation-3">
+                    <div class="mil-reveal-frame">
+                        <p class="mil-h3 mil-muted">Enjoy your visit</p>
                     </div>
                 </div>
             </div>
@@ -66,7 +70,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -79,10 +83,10 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="#.">Home</a></li>
+                                    <li><a href="portfolio">Portfolio</a></li>
+                                    <li><a href="service">Service</a></li>
+                                    <li class="mil-active"><a href="contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -98,31 +102,25 @@
                                 <div class="mil-menu-right">
                                     <div class="row justify-content-between">
                                         <div class="col-lg-4 mil-mb-60">
-
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
-
                                             <ul class="mil-menu-list">
-                                                <li><a target="_blank" href="https://bcclibrary.com/" class="mil-light-soft">BCC Library</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/Customer_Relationship_Management" class="mil-light-soft">CRM</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/e-forms/" class="mil-light-soft">E-forms</a></li>
-                                                <li><a target="_blank" href="http://hitz.com/" class="mil-light-soft">Hitz</a></li>
-                                                <li><a target="_blank" href="https://interlinkiq.com/" class="mil-light-soft">InterlinkIQ</a></li>
-                                                <li><a target="_blank" href="https://itblaster.net/" class="mil-light-soft">ITBlaster.net</a></li>
-                                                <li><a target="_blank" href="https://scrapmatic.com/" class="mil-light-soft">ScrapMatic</a></li>
+                                                <li><a target="_blank" href="projects/bcclibrary" class="mil-light-soft">BCC E-Library</a></li>
+                                                <li><a target="_blank" href="projects/crm" class="mil-light-soft">CRM</a></li>
+                                                <li><a target="_blank" href="projects/eforms" class="mil-light-soft">E-forms</a></li>
+                                                <li><a target="_blank" href="projects/hitz" class="mil-light-soft">Hitz</a></li>
+                                                <li><a target="_blank" href="projects/interlinkiq" class="mil-light-soft">InterlinkIQ</a></li>
+                                                <li><a target="_blank" href="projects/itblaster" class="mil-light-soft">ITBlaster.net</a></li>
+                                                <li><a target="_blank" href="projects/scrapsmart" class="mil-light-soft">ScrapSmart</a></li>
                                             </ul>
-
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
-
                                             <h6 class="mil-muted mil-mb-30">Useful links</h6>
-
                                             <ul class="mil-menu-list">
-                                                <li><a href="#." class="mil-light-soft">Home</a></li>
-                                                <li><a href="#." class="mil-light-soft">Portfolio</a></li>
-                                                <li><a href="#." class="mil-light-soft">Project</a></li>
-                                                <li><a href="#." class="mil-light-soft">Contact</a></li>
+                                                <li><a href="index" class="mil-light-soft">Home</a></li>
+                                                <li><a href="portfolio" class="mil-light-soft">Projects</a></li>
+                                                <li><a href="service" class="mil-light-soft">Service</a></li>
+                                                <li><a href="contact" class="mil-light-soft">Contact</a></li>
                                             </ul>
-
                                         </div>
                                     </div>
                                     <div class="mil-divider mil-mb-60"></div>
@@ -161,7 +159,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -186,8 +184,8 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="index.html">Homepage</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="index">Homepage</a></li>
+                                <li><a href="contact">Contact</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Get in touch!</h1>
                             <a href="#contact" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
@@ -242,16 +240,7 @@
                         <div class="container mil-p-120-60">
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
-
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Ashley.</div>
-
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
-
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="text" placeholder="Enter our email">
-                                        <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form>
-
+                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Marvin.</div>
                                 </div>
                                 <div class="col-md-7 col-lg-6">
                                     <div class="row justify-content-end">
@@ -260,33 +249,28 @@
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="index">Home</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
+                                                        <a href="portfolio">Projects</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                        <a href="services">Services</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
+                                                        <a href="contact">Contact</a>
                                                     </li>
                                                 </ul>
                                             </nav>
 
                                         </div>
                                         <div class="col-md-6 col-lg-5">
-
                                             <ul class="mil-menu-list mil-up mil-mb-60">
-                                                <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
-                                                <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
+                                                <li><a href="index" class="mil-light-soft">Home</a></li>
+                                                <li><a href="portfolio" class="mil-light-soft">Portfolio</a></li>
+                                                <li><a href="portfolio" class="mil-light-soft">Project</a></li>
+                                                <li><a href="contact" class="mil-light-soft">Contact</a></li>
                                             </ul>
-
                                         </div>
                                     </div>
                                 </div>
@@ -294,38 +278,36 @@
 
                             <div class="row justify-content-between flex-sm-row-reverse">
                                 <div class="col-md-7 col-lg-6">
-
                                     <div class="row justify-content-between">
+                                        <div class="col-lg-4 mil-mb-60">
 
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
+                                            <h6 class="mil-muted mil-mb-30">Address</h6>
 
-                                            <h6 class="mil-muted mil-up mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California <span class="mil-no-wrap">+51 174 705 812</span></p>
-
+                                            <p class="mil-light-soft">Don Benedicto Street Lapu-lapu City, Cebu
+                                                <span class="mil-no-wrap">Philippines</span>
+                                            </p>
                                         </div>
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Germany</h6>
-
-                                            <p class="mil-light-soft mil-up">Leehove 40, 2678 MC De Lier, Netherlands <span class="mil-no-wrap">+31 174 705 811</span></p>
-
+                                        <div class="col-lg-4 mil-mb-60">
+                                            <h6 class="mil-muted mil-mb-30">Contact</h6>
+                                            <p class="mil-light-soft">marvin.villasencio25@gmail.com 
+                                                <span class="mil-no-wrap">devnokturnal07@gmail.com</span>
+                                                <span class="mil-no-wrap">+63 991 426 0587</span>
+                                            </p>
                                         </div>
                                     </div>
-
                                 </div>
                                 <div class="col-md-4 col-lg-6 mil-mb-60">
 
                                     <div class="mil-vert-between">
                                         <div class="mil-mb-30">
                                             <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
+                                                <li><a target="_blank" href="https://github.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-github"></i></a></li>
+                                                <li><a target="_blank" href="https://www.linkedin.com/in/marvin-villasencio-1796562a8/" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
+                                                <li><a target="_blank" href="https://www.facebook.com/100041542215691/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a></li>
+                                                <li><a target="_blank" href="https://gitlab.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-gitlab-square"></i></a></li>
                                             </ul>
                                         </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2023 - Mil. All Rights Reserved.</p>
+                                        <p class="mil-light-soft mil-up">© 2025 Marvin Baylon. </p>
                                     </div>
 
                                 </div>
