--- a/projects/crm.html
+++ b/projects/crm.html
@@ -7,17 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="assets/css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="../assets/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <!-- swiper css -->
-    <link rel="stylesheet" href="assets/css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="../assets/css/plugins/swiper.min.css">
     <!-- fancybox css -->
-    <link rel="stylesheet" href="assets/css/plugins/fancybox.min.css">
+    <link rel="stylesheet" href="../assets/css/plugins/fancybox.min.css">
     <!-- ashley scss -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <!-- page name -->
     <title>Marvin</title>
+
 </head>
 
 <body>
@@ -69,7 +70,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/index" class="mil-logo">M.</a>
+                <a href="../index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -82,10 +83,10 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio">Projects</a></li>
-                                    <li><a href="service">Service</a></li>
-                                    <li><a href="contact">Contact</a></li>
+                                    <li><a href="../index">Home</a></li>
+                                    <li class="mil-active"><a href="../portfolio">Projects</a></li>
+                                    <li><a href="../service">Service</a></li>
+                                    <li><a href="../contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -103,22 +104,22 @@
                                         <div class="col-lg-4 mil-mb-60">
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
                                             <ul class="mil-menu-list">
-                                                <li><a target="_blank" href="projects/bcclibrary" class="mil-light-soft">BCC E-Library</a></li>
-                                                <li><a target="_blank" href="projects/crm" class="mil-light-soft">CRM</a></li>
-                                                <li><a target="_blank" href="projects/eforms" class="mil-light-soft">E-forms</a></li>
-                                                <li><a target="_blank" href="projects/hitz" class="mil-light-soft">Hitz</a></li>
-                                                <li><a target="_blank" href="projects/interlinkiq" class="mil-light-soft">InterlinkIQ</a></li>
-                                                <li><a target="_blank" href="projects/itblaster" class="mil-light-soft">ITBlaster.net</a></li>
-                                                <li><a target="_blank" href="projects/scrapsmart" class="mil-light-soft">ScrapSmart</a></li>
+                                                <li><a target="_blank" href="../projects/bcclibrary" class="mil-light-soft">BCC E-Library</a></li>
+                                                <li><a target="_blank" href="../projects/crm" class="mil-light-soft">CRM</a></li>
+                                                <li><a target="_blank" href="../projects/eforms" class="mil-light-soft">E-forms</a></li>
+                                                <li><a target="_blank" href="../projects/hitz" class="mil-light-soft">Hitz</a></li>
+                                                <li><a target="_blank" href="../projects/interlinkiq" class="mil-light-soft">InterlinkIQ</a></li>
+                                                <li><a target="_blank" href="../projects/itblaster" class="mil-light-soft">ITBlaster.net</a></li>
+                                                <li><a target="_blank" href="../projects/scrapsmart" class="mil-light-soft">ScrapSmart</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
                                             <h6 class="mil-muted mil-mb-30">Useful links</h6>
                                             <ul class="mil-menu-list">
-                                                <li><a href="/index" class="mil-light-soft">Home</a></li>
-                                                <li><a href="portfolio" class="mil-light-soft">Projects</a></li>
-                                                <li><a href="service" class="mil-light-soft">Service</a></li>
-                                                <li><a href="contact" class="mil-light-soft">Contact</a></li>
+                                                <li><a href="../index" class="mil-light-soft">Home</a></li>
+                                                <li><a href="../portfolio" class="mil-light-soft">Projects</a></li>
+                                                <li><a href="../service" class="mil-light-soft">Service</a></li>
+                                                <li><a href="../contact" class="mil-light-soft">Contact</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -158,7 +159,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/index" class="mil-logo">M.</a>
+                <a href="../index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -179,65 +180,83 @@
             <div id="swupMain" class="mil-main-transition">
 
                 <!-- banner -->
-                <section class="mil-banner-personal">
-
-                    <div class="mil-animation-frame">
-                        <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="7" data-value-2="1.4" style="right: 25%;"></div>
+                <div class="mil-inner-banner">
+                    <div class="mil-banner-content mil-up">
+                        <div class="mil-animation-frame">
+                            <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="6" data-value-2="1.4"></div>
+                        </div>
+                        <div class="container">
+                            <ul class="mil-breadcrumbs mil-mb-60">
+                                <li><a href="../index">Homepage</a></li>
+                                <li><a href="portfolio">Portfolio</a></li>
+                                <li>BCC E-Library</li>
+                            </ul>
+                            <h1 class="mil-mb-60">BCC <span class="mil-thin">E-Library</span></h1>
+                            <a href="#project" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
+                                <span>Read more</span>
+                            </a>
+                        </div>
                     </div>
+                </div>
+                <!-- banner end -->
 
-                    <div class="container">
-                        <div class="mil-banner-content mil-up">
+                <!-- project -->
+                <section>
+                    <div class="container mil-p-120-120" id="project">
+                        <div class="row justify-content-between">
+                            <div class="col-lg-4">
 
-                            <div class="row align-items-center">
-                                <div class="col-lg-6">
-                                    <div class="mil-personal-text">
-                                        <p class="mil-mb-60">Hello! My name is</p>
-                                        <h1 class="mil-mb-60">Marvin <br>Villasencio <br>Baylon</h1>
-                                        <div class="row justify-content-center">
-                                            <div class="col-lg-8">
+                                <div class="mil-p-0-120">
+                                    <ul class="mil-service-list mil-dark mil-mb-60">
+                                        <li class="mil-up">Client: &nbsp;<span class="mil-dark">Envato Market</span></li>
+                                        <li class="mil-up">Date: &nbsp;<span class="mil-dark">April 2023</span></li>
+                                        <li class="mil-up">Author: &nbsp;<span class="mil-dark">Paul Trueman</span></li>
+                                    </ul>
 
-                                                <span class="mil-suptitle mil-suptitle-dark mil-mb-60">Crafting Scalable Web Solutions: <br> Merging Efficiency with Innovation.</span>
+                                    <h5 class="mil-up mil-mb-30">Simplicity, elegance, innovation!</h5>
 
-                                                <a href="services" class="mil-link mil-dark mil-arrow-place">
-                                                    <span>More about me</span>
-                                                </a>
+                                    <p class="mil-up mil-mb-30">A home surveillance camera that pays great attention to security and user privacy, featuring two modes to provide security while protecting personal privacy.The camera has an open and closed mode, we define the product to have clear two sides, expressing two working states and emotions.</p>
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mil-portrait-frame">
-                                        <img src="assets/img/faces/large/hero.png" alt="Portrait">
-                                    </div>
-                                </div>
-                            </div>
+                                    <p class="mil-up mil-mb-60">Presents a simple and quiet state when not in use, delivering a gentle and security.At the same time, the camera can adapt to a variety of environments, providing elegant ways of wall hanging and standing installation.</p>
 
-                            <div class="mil-banner-panel">
-                                <h5>Building a Smarter Web for Tomorrow</h5>
-
-                                <div class="mil-right">
-                                    <div class="mil-social-frame">
-                                        <ul class="mil-social-icons mil-dark">
-                                            <li><a target="_blank" href="https://github.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-github"></i></a></li>
-                                            <li><a target="_blank" href="https://www.linkedin.com/in/marvin-villasencio-1796562a8/" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
-                                            <li><a target="_blank" href="https://www.facebook.com/100041542215691/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a></li>
-                                            <li><a target="_blank" href="https://gitlab.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-gitlab-square"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <a href="portfolio" class="mil-button mil-arrow-place">
-                                        <span>View pOrtfolio</span>
+                                    <a data-no-swup href="bcclibrary.com" target="_blank" class="mil-link mil-dark mil-up  mil-arrow-place">
+                                        <span>Visit website</span>
                                     </a>
                                 </div>
 
+                            </div>
+                            <div class="col-lg-7">
+
+                                <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
+                                    <img src="../assets/img/works/2/1.gif" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/1.gif" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
+                                    </a>
+                                </div>
+                                <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
+                                    <img src="../assets/img/works/2/2.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/2.jpg" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
+                                    </a>
+                                </div>
+                                <div class="mil-image-frame mil-horizontal mil-up mil-mb-30">
+                                    <img src="../assets/img/works/2/3.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/3.jpg" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
+                                    </a>
+                                </div>
+                                <div class="mil-image-frame mil-horizontal mil-up">
+                                    <img src="../assets/img/works/2/4.jpg" alt="image">
+                                    <a data-fancybox="gallery" data-no-swup href="../assets/img/works/2/4.jpg" class="mil-zoom-btn">
+                                        <img src="../assets/img/icons/zoom.svg" alt="zoom">
+                                    </a>
+                                </div>
 
                             </div>
-
                         </div>
                     </div>
-
                 </section>
-                <!-- banner end -->
+                <!-- project end -->
 
                 <!-- hidden elements -->
                 <div class="mil-hidden-elements">
@@ -352,24 +371,23 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="assets/js/plugins/jquery.min.js"></script>
+    <script src="../assets/js/plugins/jquery.min.js"></script>
     <!-- swup js -->
-    <script src="assets/js/plugins/swup.min.js"></script>
+    <script src="../assets/js/plugins/swup.min.js"></script>
     <!-- swiper js -->
-    <script src="assets/js/plugins/swiper.min.js"></script>
+    <script src="../assets/js/plugins/swiper.min.js"></script>
     <!-- fancybox js -->
-    <script src="assets/js/plugins/fancybox.min.js"></script>
+    <script src="../assets/js/plugins/fancybox.min.js"></script>
     <!-- gsap js -->
-    <script src="assets/js/plugins/gsap.min.js"></script>
+    <script src="../assets/js/plugins/gsap.min.js"></script>
     <!-- scroll smoother -->
-    <script src="assets/js/plugins/smooth-scroll.js"></script>
+    <script src="../assets/js/plugins/smooth-scroll.js"></script>
     <!-- scroll trigger js -->
-    <script src="assets/js/plugins/ScrollTrigger.min.js"></script>
+    <script src="../assets/js/plugins/ScrollTrigger.min.js"></script>
     <!-- scroll to js -->
-    <script src="assets/js/plugins/ScrollTo.min.js"></script>
+    <script src="../assets/js/plugins/ScrollTo.min.js"></script>
     <!-- ashley js -->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
-
 </html>
