--- a/service.html
+++ b/service.html
@@ -66,7 +66,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -80,9 +80,9 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="portfolio">Portfolio</a></li>
+                                    <li><a href="service">Service</a></li>
+                                    <li><a href="contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -161,7 +161,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -189,9 +189,9 @@
                     <div class="mil-banner-content mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service.html">Service</a></li>
+                                <li><a href="home-1">Homepage</a></li>
+                                <li><a href="services">Services</a></li>
+                                <li><a href="service">Service</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Website <span class="mil-thin">Design</span><br> and <span class="mil-thin">Development</span></h1>
                             <a href="#service" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
@@ -211,7 +211,7 @@
                                 <h4 class="mil-up mil-mb-30">Your <span class="mil-thin">Approach</span> <br>and <span class="mil-thin">Work Specifics</span></h4>
                                 <p class="mil-up mil-mb-30">At our agency, we have a unique approach to web design and development. We believe in creating websites that not only look great but also perform well in terms of user experience, functionality, and search engine optimization.</p>
                                 <div class="mil-up">
-                                    <a href="portfolio-3.html" class="mil-link mil-dark mil-arrow-place">
+                                    <a href="portfolio-3" class="mil-link mil-dark mil-arrow-place">
                                         <span>View works</span>
                                     </a>
                                 </div>
@@ -321,7 +321,7 @@
                                 <p class="mil-light-soft mil-up mil-mb-120">At our agency, we have a unique approach to web design and development. <br>We believe in creating in terms of user experience, functionality.</p>
                             </div>
 
-                            <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up">
+                            <a href="contact" class="mil-price-card mil-choose mil-accent-cursor mil-up">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
                                         <div class="mil-price-number mil-mb-30"><span class="mil-muted mil-thin">$</span><span class="mil-accent">19</span></div>
@@ -339,7 +339,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up">
+                            <a href="contact" class="mil-price-card mil-choose mil-accent-cursor mil-up">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
                                         <div class="mil-price-number mil-mb-30"><span class="mil-muted mil-thin">$</span><span class="mil-accent">29</span></div>
@@ -357,7 +357,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up">
+                            <a href="contact" class="mil-price-card mil-choose mil-accent-cursor mil-up">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
                                         <div class="mil-price-number mil-mb-30"><span class="mil-muted mil-thin">$</span><span class="mil-accent">49</span></div>
@@ -375,7 +375,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up mil-mb-60">
+                            <a href="contact" class="mil-price-card mil-choose mil-accent-cursor mil-up mil-mb-60">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
                                         <div class="mil-price-number mil-mb-30"><span class="mil-muted mil-thin">$</span><span class="mil-accent">199</span></div>
@@ -395,7 +395,7 @@
                             </a>
 
                             <div class="mil-center">
-                                <a href="contact.html" class="mil-button  mil-arrow-place">
+                                <a href="contact" class="mil-button  mil-arrow-place">
                                     <span>individual solution</span>
                                 </a>
                             </div>
@@ -414,7 +414,7 @@
                             </div>
                             <div class="col-lg-6 mil-mb-30">
                                 <div class="mil-adaptive-right mil-up">
-                                    <a href="services.html" class="mil-link mil-dark mil-arrow-place">
+                                    <a href="services" class="mil-link mil-dark mil-arrow-place">
                                         <span>View all</span>
                                     </a>
                                 </div>
@@ -423,7 +423,7 @@
                         <div class="row">
                             <div class="col-lg-4">
 
-                                <a href="service.html" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
+                                <a href="service" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                                     <h4 class="mil-up mil-mb-30">Branding and <br>Identity Design</h4>
                                     <p class="mil-descr mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                     <ul class="mil-service-list mil-dark mil-mb-30">
@@ -440,7 +440,7 @@
                             </div>
                             <div class="col-lg-4">
 
-                                <a href="service.html" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
+                                <a href="service" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                                     <h4 class="mil-up mil-mb-30">Advertising <br>and Marketing</h4>
                                     <p class="mil-descr mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                     <ul class="mil-service-list mil-dark mil-mb-30">
@@ -457,7 +457,7 @@
                             </div>
                             <div class="col-lg-4">
 
-                                <a href="service.html" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
+                                <a href="service" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                                     <h4 class="mil-up mil-mb-30">Creative <br>Consulting</h4>
                                     <p class="mil-descr mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                     <ul class="mil-service-list mil-dark mil-mb-30">
@@ -483,16 +483,7 @@
                         <div class="container mil-p-120-60">
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
-
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Ashley.</div>
-
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
-
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="text" placeholder="Enter our email">
-                                        <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form>
-
+                                    <div class="mil-muted mil-logo mil-up mil-mb-30">Marvin.</div>
                                 </div>
                                 <div class="col-md-7 col-lg-6">
                                     <div class="row justify-content-end">
@@ -501,33 +492,28 @@
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="index">Home</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
+                                                        <a href="portfolio">Projects</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                        <a href="services">Services</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
+                                                        <a href="contact">Contact</a>
                                                     </li>
                                                 </ul>
                                             </nav>
 
                                         </div>
                                         <div class="col-md-6 col-lg-5">
-
                                             <ul class="mil-menu-list mil-up mil-mb-60">
-                                                <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
-                                                <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
+                                                <li><a href="index" class="mil-light-soft">Home</a></li>
+                                                <li><a href="portfolio" class="mil-light-soft">Portfolio</a></li>
+                                                <li><a href="portfolio" class="mil-light-soft">Project</a></li>
+                                                <li><a href="contact" class="mil-light-soft">Contact</a></li>
                                             </ul>
-
                                         </div>
                                     </div>
                                 </div>
@@ -535,38 +521,36 @@
 
                             <div class="row justify-content-between flex-sm-row-reverse">
                                 <div class="col-md-7 col-lg-6">
-
                                     <div class="row justify-content-between">
+                                        <div class="col-lg-4 mil-mb-60">
 
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
+                                            <h6 class="mil-muted mil-mb-30">Address</h6>
 
-                                            <h6 class="mil-muted mil-up mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California <span class="mil-no-wrap">+51 174 705 812</span></p>
-
+                                            <p class="mil-light-soft">Don Benedicto Street Lapu-lapu City, Cebu
+                                                <span class="mil-no-wrap">Philippines</span>
+                                            </p>
                                         </div>
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Germany</h6>
-
-                                            <p class="mil-light-soft mil-up">Leehove 40, 2678 MC De Lier, Netherlands <span class="mil-no-wrap">+31 174 705 811</span></p>
-
+                                        <div class="col-lg-4 mil-mb-60">
+                                            <h6 class="mil-muted mil-mb-30">Contact</h6>
+                                            <p class="mil-light-soft">marvin.villasencio25@gmail.com 
+                                                <span class="mil-no-wrap">devnokturnal07@gmail.com</span>
+                                                <span class="mil-no-wrap">+63 991 426 0587</span>
+                                            </p>
                                         </div>
                                     </div>
-
                                 </div>
                                 <div class="col-md-4 col-lg-6 mil-mb-60">
 
                                     <div class="mil-vert-between">
                                         <div class="mil-mb-30">
                                             <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
+                                                <li><a target="_blank" href="https://github.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-github"></i></a></li>
+                                                <li><a target="_blank" href="https://www.linkedin.com/in/marvin-villasencio-1796562a8/" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
+                                                <li><a target="_blank" href="https://www.facebook.com/100041542215691/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a></li>
+                                                <li><a target="_blank" href="https://gitlab.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-gitlab-square"></i></a></li>
                                             </ul>
                                         </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2023 - Mil. All Rights Reserved.</p>
+                                        <p class="mil-light-soft mil-up">© 2025 Marvin Baylon. </p>
                                     </div>
 
                                 </div>
