--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -80,9 +80,9 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
-                                    <li><a href="service.html">Service</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="portfolio">Portfolio</a></li>
+                                    <li><a href="service">Service</a></li>
+                                    <li><a href="contact">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -161,7 +161,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">M.</a>
+                <a href="index" class="mil-logo">M.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -191,8 +191,8 @@
                                 </div>
                                 <div class="container">
                                     <ul class="mil-breadcrumbs mil-light mil-mb-60">
-                                        <li><a href="home-1.html">Homepage</a></li>
-                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="home-1">Homepage</a></li>
+                                        <li><a href="services">Services</a></li>
                                     </ul>
                                     <h1 class="mil-muted mil-mb-60">This is <span class="mil-thin">what</span><br> we do <span class="mil-thin">best</span></h1>
                                     <a href="#services" class="mil-link mil-accent mil-arrow-place mil-down-arrow">
@@ -217,7 +217,7 @@
                                     <div class="col-lg-7">
                                         <div class="row">
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
+                                                <a href="service" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Branding and <br>Identity Design</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
@@ -232,7 +232,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
+                                                <a href="service" class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Website Design <br>and Development</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
@@ -247,7 +247,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
+                                                <a href="service" class="mil-service-card-lg mil-more mil-accent-cursor mil-offset">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Advertising and <br>Marketing Campaigns</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
@@ -262,7 +262,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-md-6 col-lg-6">
-                                                <a href="service.html" class="mil-service-card-lg mil-more mil-accent-cursor">
+                                                <a href="service" class="mil-service-card-lg mil-more mil-accent-cursor">
                                                     <h4 class="mil-muted mil-up mil-mb-30">Creative Consulting <br>Concept Development</h4>
                                                     <p class="mil-descr mil-light-soft mil-up mil-mb-30">Our creative agency is a team of professionals focused on helping your brand grow.</p>
                                                     <ul class="mil-service-list mil-light mil-mb-30">
@@ -297,7 +297,7 @@
                         </div>
                         <div class="mil-center">
                             <h2 class="mil-up mil-mb-60">Let’s make an <span class="mil-thin">impact</span><br> together. Ready <span class="mil-thin">when you are</span></h2>
-                            <div class="mil-up"><a href="contact.html" class="mil-button mil-arrow-place"><span>Contact us</span></a></div>
+                            <div class="mil-up"><a href="contact" class="mil-button mil-arrow-place"><span>Contact us</span></a></div>
                         </div>
                     </div>
                 </section>
@@ -327,19 +327,19 @@
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="home-1">Home</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="portfolio.html">Portfolio</a>
+                                                        <a href="portfolio">Portfolio</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                        <a href="services">Services</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
+                                                        <a href="contact">Contact</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
+                                                        <a href="blog">Blog</a>
                                                     </li>
                                                 </ul>
                                             </nav>
